# ComputerGraphic

./: CMakeLists.txt  LICENSE  README.md  custom_test.h  main.cpp  main.h  makefile
docs/: DOCS.md  REFERENCES.md
docs/image/readme/: Orbit_animation.mov  animation.mov  changAt_animation.mov
mnist/: 199.csv  small.csv
outputFile/: test2.txt
src/: GraphicScreen.h  Pixel.h  Screen.h  Utility.h
src/Draw/: Circle.h  GraphicObject.h  Line.h  Object.h
src/Draw/GraphicObject/: Circle.cpp  Circle.h  Line.cpp  Line.h  Object.cpp  Object.h  Rectangle.cpp  Rectangle.h
src/ImageProcessing/: Image.h
src/ImageProcessing/Image/: BaseImage.cpp  BaseImage.h  Bitmap.cpp  Bitmap.h
src/PixelScreen/: Pixel.cpp  Pixel.h  Screen.cpp  Screen.h  ScreenSetting.cpp  ScreenSetting.h
src/Utility/: PriorityQueue.h  color.cpp  color.h  cursor.cpp  cursor.h  performance.cpp  performance.h
test_application/: test_application.h
test_application/digit_recognizer/: Dataset.cpp  Dataset.h
test_application/physic/: Bouncing.cpp  Bouncing.h  Collision.cpp  Collision.h  Orbit.cpp  Orbit.h
testcase/: testcase.cpp  testcase.h
testcase/Image/: test_Bitmap.cpp  test_Bitmap.h
testcase/Object/: Line.cpp  test_Circle.cpp  test_Circle.h  test_Line.cpp  test_Line.h  test_Rectangle.cpp  test_Rectangle.h
testcase/Screen/: test_changeAt.cpp  test_changeAt.h  test_draw.cpp  test_draw.h  test_operator.cpp  test_operator.h  test_plot.cpp  test_plot.h
